--- a/silver/index.html
+++ b/silver/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Silver Carbon - Asset Development and Carbon Finance Company">
+    <meta name="description" content="Silver Carbon - Silver Carbon specialises in the creation value in the carbon credits value chain from creation to retirement">
     <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Silver Carbon - Carbon Asset Development and Carbon Finance</title>
